# ClawGate

./: .env.example  .gitignore  CHATGPT_SUBSCRIPTION_SETUP.md  CLOUD_MODELS_UPDATED.md  INTEGRATION_COMPLETE.md  OPENCLAW_INTEGRATION.md  PERFORMANCE_REPORT.md  QUICKSTART.md  README.md  SUBSCRIPTION_SETUP.md  TEST_RESULTS.md  V2_INTEGRATION_REPORT.md  pyproject.toml  test_direct.py  test_final.py  test_glm_coding.py  test_integration_requests.py  test_openclaw_integration.py  test_simple.py
clawgate/: __init__.py
config/: engines.yaml  models.yaml  multi_model.yaml  test_config.yaml
docs/: CONTEXT_SHIFT_ACCEPTANCE_REPORT.md  CONTEXT_SHIFT_DAY2_SUMMARY.md  CONTEXT_SHIFT_INTEGRATION.md  DEPENDENCIES.md  PHASE2_FEATURES.md  PHASE2_PERFORMANCE_REPORT.md  PHASE2_PROJECT_COMPLETION.md  THUNDERLLAMA_INTEGRATION.md
scripts/: benchmark.py  cb_benchmark.py  configure_cloud.sh  download_models.sh  get_chatgpt_token.sh  performance_report.py  quick_start.sh  setup.sh  simple_benchmark.py  start.sh  start_context_shift_services.sh  start_multi_model.py  start_v2.sh  test_cloud_apis.py  test_v2_features.py  validate_setup.py  verify_cb_effect.py
tests/: manual_test_layering.py  test_ab_convstore.py  test_cache_tuner.py  test_cloud_dispatcher.py  test_context_engine.py  test_context_shift_integration.py  test_context_shift_performance.py  test_conversation_store.py  test_dashboard.py  test_dashboard_cache.py  test_dashboard_cache_simple.py  test_engines.py  test_layering_strategy.py  test_phase2_e2e.py  test_phase2_performance_regression.py  test_prompt_cache.py  test_router.py  (+3 more)
(+53 files in other folders)
